# openapi-schemer

./: .gitmodules  Cargo.toml  HELP.md  README.md  build.gradle.kts  build.rs  petstore.yaml  settings.gradle.kts
.github/workflows/: release.yml  unit-tests.yml
example-specs/multi-file/: petstore.yaml
example-specs/multi-file/resources/: pets.yaml
example-specs/multi-file/schemas/: Error.yaml  Pet.yaml  Pets.yaml
hooks/: README.md  pre-commit
src/: main.rs
src/bindings/: key_finder.rs  mod.rs  operation.rs  path.rs  schema.rs
src/content/: mod.rs
src/error/: mod.rs
src/main/kotlin/com/patoconnor43/openapischemer/: OpenapiSchemerApplication.kt
src/operation/: mod.rs
src/path/: mod.rs
src/schema/: mod.rs
src/test/kotlin/com/patoconnor43/openapischemer/: OpenapiSchemerApplicationTests.kt
