[package]
name = "openapi-schemer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~3", features = ["derive"]}
tree-sitter = {version = "~0.20"}

[dev-dependencies]
mocktopus = "0.7.0"

[build-dependencies]
cc="*"
